<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergey.a2048j.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="90sp"
            android:text="@string/greating"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:context="com.example.android.justjava.MainActivity">

            <ImageView
                android:id="@+id/field"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/f4x4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:context="com.example.android.justjava.MainActivity">



                <ImageView
                    android:id="@+id/lover"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:src="@drawable/lower" />



                <TextView
                    android:id="@+id/sizeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingLeft="30sp"
                    android:paddingRight="30sp"
                    android:text="@string/f4x4"
                    android:textSize="28sp" />




                <ImageView
                    android:id="@+id/higher"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/higher" />
        </LinearLayout>

        <Button
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/play" />
    </LinearLayout>


    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- The main content view -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- The navigation drawer -->
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"/>

    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>